--- a/registrarme.html
+++ b/registrarme.html
@@ -28,7 +28,7 @@
             </form>
           </div>
           <div class="registrarme">
-         <a id="iniciarSesion"  href="landpage.html">Ya tengo una cuenta. Iniciar sesion</a> 
+         <a id="iniciarSesion"  href="index.html">Ya tengo una cuenta. Iniciar sesion</a> 
         </div>
         
         </div>
